01_python基础1/jitfailure-dolfin_expression_eb6d11a74a6b874f8ed804476585bb20/error.log
/tmp/tmp1izq_7_p/dolfin_expression_eb6d11a74a6b874f8ed804476585bb20.cpp: In member function ‘virtual void dolfin::dolfin_expression_eb6d11a74a6b874f8ed804476585bb20::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp1izq_7_p/dolfin_expression_eb6d11a74a6b874f8ed804476585bb20.cpp:63:23: error: ‘f’ was not declared in this scope
   63 |           values[0] = f(4)*exp(-pow(beta, 2)*(pow(x[0], 2) + pow(x[1] - R0, 2)));
      |                       ^
/tmp/tmp1izq_7_p/dolfin_expression_eb6d11a74a6b874f8ed804476585bb20.cpp: In member function ‘virtual double dolfin::dolfin_expression_eb6d11a74a6b874f8ed804476585bb20::get_property(std::string) const’:
/tmp/tmp1izq_7_p/dolfin_expression_eb6d11a74a6b874f8ed804476585bb20.cpp:75:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
   75 |           if (name == "beta") return beta;          if (name == "R0") return R0;
      |           ^~
/tmp/tmp1izq_7_p/dolfin_expression_eb6d11a74a6b874f8ed804476585bb20.cpp:75:53: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   75 |           if (name == "beta") return beta;          if (name == "R0") return R0;
      |                                                     ^~
